<resources>
    <string name="app_name">L04-Reservation</string>
    <string name="name">Name:</string>
    <string name="enter_full_name">Enter Full Name</string>
    <string name="mobile_number">Mobile Number:</string>
    <string name="enter_mobile_number">Enter Mobile Number</string>
    <string name="number_of_pax">Number of Pax</string>
    <string name="enter_number_of_pax">Enter Number of Pax</string>
    <string name="table_type">Table Type</string>
    <string name="smoking">Smoking</string>
    <string name="non_smoking">Non-smoking</string>
    <string name="select_date">Select Date</string>
    <string name="select_time">Select Time</string>
    <string name="reserve">Reserve</string>
    <string name="reset">Reset</string>
</resources>