<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/name" />

            <EditText
                android:id="@+id/editTextName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/enter_full_name"
                android:inputType="text" />

            <TextView
                android:id="@+id/textViewNo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/mobile_number" />

            <EditText
                android:id="@+id/editTextNo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/enter_mobile_number"
                android:inputType="number" />

            <TextView
                android:id="@+id/textViewPax"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/number_of_pax" />

            <EditText
                android:id="@+id/editTextPax"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/enter_number_of_pax"
                android:inputType="number" />

            <TextView
                android:id="@+id/textViewTable"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/table_type" />

            <RadioGroup
                android:id="@+id/RGTable"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <RadioButton
                    android:id="@+id/radioButtonSmoking"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/smoking" />

                <RadioButton
                    android:id="@+id/radioButtonNS"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/non_smoking" />

                <TextView
                    android:id="@+id/textViewDate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/select_date" />

            </RadioGroup>

            <DatePicker
                android:id="@+id/datePicker"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:calendarViewShown="false"
                android:datePickerMode="spinner"

                />

            <TextView
                android:id="@+id/textViewTime"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/select_time" />

            <TimePicker
                android:id="@+id/timePicker"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:timePickerMode="spinner" />

            <TextView
                android:id="@+id/textViewDisplay"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/buttonReserve"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/reserve" />

                <Button
                    android:id="@+id/buttonReset"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/reset" />

            </LinearLayout>

        </LinearLayout>
    </ScrollView>
</LinearLayout>
